Fixed docker-compose to allow scaling vet-service